// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResetPasswordForm> @Render should render "error" 1`] = `
<ResetPassword>
  <Container
    fluid={false}
  >
    <div
      className="container"
    >
      <Row
        className="mt-5"
        noGutters={false}
      >
        <div
          className="mt-5 row"
        >
          <p>
            Your last request to reset password has expired. Please send another request to reset your password.
          </p>
        </div>
      </Row>
      <Row
        className="mt-5"
        noGutters={false}
      >
        <div
          className="mt-5 row"
        >
          <Col>
            <div
              className="col"
            >
              <ForgotMyPasswordForm>
                <Col>
                  <div
                    className="col"
                  >
                    <Row
                      noGutters={false}
                    >
                      <div
                        className="row"
                      >
                        <h3>
                          Forgot my password
                        </h3>
                      </div>
                    </Row>
                    <Row
                      noGutters={false}
                    >
                      <div
                        className="row"
                      >
                        <p>
                          Enter your email address and we will send you a link to reset your password.
                        </p>
                      </div>
                    </Row>
                    <Row
                      noGutters={false}
                    >
                      <div
                        className="row"
                      >
                        <Form
                          className="w-100"
                          id="ForgotMyPasswordForm"
                          inline={false}
                          onSubmit={[Function]}
                        >
                          <form
                            className="w-100"
                            id="ForgotMyPasswordForm"
                            onSubmit={[Function]}
                          >
                            <FormGroup
                              controlId="forgotMyPasswordEmail"
                            >
                              <div
                                className="form-group"
                              >
                                <FormControl
                                  isInvalid={false}
                                  name="email"
                                  onChange={[Function]}
                                  placeholder="Enter email"
                                  required={true}
                                  type="email"
                                  value=""
                                >
                                  <input
                                    className="form-control"
                                    id="forgotMyPasswordEmail"
                                    name="email"
                                    onChange={[Function]}
                                    placeholder="Enter email"
                                    required={true}
                                    type="email"
                                    value=""
                                  />
                                </FormControl>
                                <Feedback
                                  type="invalid"
                                >
                                  <div
                                    className="invalid-feedback"
                                  />
                                </Feedback>
                                <FormText
                                  className="text-muted"
                                >
                                  <small
                                    className="text-muted form-text"
                                  >
                                    We'll never share your email with anyone else.
                                  </small>
                                </FormText>
                              </div>
                            </FormGroup>
                            <Button
                              active={false}
                              disabled={false}
                              id="ForgotMyPasswordSubmit"
                              type="submit"
                              variant="primary"
                            >
                              <button
                                className="btn btn-primary"
                                disabled={false}
                                id="ForgotMyPasswordSubmit"
                                type="submit"
                              >
                                Reset Password
                              </button>
                            </Button>
                          </form>
                        </Form>
                      </div>
                    </Row>
                  </div>
                </Col>
              </ForgotMyPasswordForm>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Container>
</ResetPassword>
`;

exports[`<ResetPasswordForm> @Render should render "form" 1`] = `
<ResetPassword>
  <Container
    fluid={false}
  >
    <div
      className="container"
    >
      <ResetPasswordForm
        resetPassword={[Function]}
        token="token1234"
      >
        <Row
          className="mt-5 mb-1"
          noGutters={false}
        >
          <div
            className="mt-5 mb-1 row"
          >
            <h1>
              Reset Password
            </h1>
          </div>
        </Row>
        <Row
          noGutters={false}
        >
          <div
            className="row"
          >
            <Form
              className="w-100"
              id="ResetPasswordForm"
              inline={false}
              onSubmit={[Function]}
            >
              <form
                className="w-100"
                id="ResetPasswordForm"
                onSubmit={[Function]}
              >
                <FormGroup
                  className="mb-3"
                  controlId="newPassword"
                >
                  <div
                    className="mb-3 form-group"
                  >
                    <FormLabel
                      column={false}
                      srOnly={false}
                    >
                      <label
                        className="form-label"
                        htmlFor="newPassword"
                      >
                        New password
                      </label>
                    </FormLabel>
                    <FormControl
                      name="newPassword"
                      onChange={[Function]}
                      placeholder="Password"
                      required={true}
                      type="password"
                      value=""
                    >
                      <input
                        className="form-control"
                        id="newPassword"
                        name="newPassword"
                        onChange={[Function]}
                        placeholder="Password"
                        required={true}
                        type="password"
                        value=""
                      />
                    </FormControl>
                    <PasswordStrength
                      password=""
                    >
                      <div>
                        <ProgressBar
                          animated={false}
                          isChild={false}
                          label=""
                          max={100}
                          min={0}
                          now={0}
                          srOnly={false}
                          striped={false}
                          variant="danger"
                        >
                          <div
                            className="progress"
                          >
                            <div
                              aria-valuemax={100}
                              aria-valuemin={0}
                              aria-valuenow={0}
                              className="progress-bar bg-danger"
                              role="progressbar"
                              style={
                                Object {
                                  "width": "0%",
                                }
                              }
                            />
                          </div>
                        </ProgressBar>
                        <small
                          className="form-text text-muted"
                          id="passwordHelpBlock"
                        />
                      </div>
                    </PasswordStrength>
                  </div>
                </FormGroup>
                <FormGroup
                  className="mb-3"
                  controlId="confirmPassword"
                >
                  <div
                    className="mb-3 form-group"
                  >
                    <FormLabel
                      column={false}
                      srOnly={false}
                    >
                      <label
                        className="form-label"
                        htmlFor="confirmPassword"
                      >
                        Confirm password
                      </label>
                    </FormLabel>
                    <FormControl
                      isInvalid={false}
                      name="confirmPassword"
                      onChange={[Function]}
                      placeholder="Password"
                      required={true}
                      type="password"
                      value=""
                    >
                      <input
                        className="form-control"
                        id="confirmPassword"
                        name="confirmPassword"
                        onChange={[Function]}
                        placeholder="Password"
                        required={true}
                        type="password"
                        value=""
                      />
                    </FormControl>
                    <Feedback
                      type="invalid"
                    >
                      <div
                        className="invalid-feedback"
                      />
                    </Feedback>
                    <FormText
                      className="text-muted"
                    >
                      <small
                        className="text-muted form-text"
                      >
                        Matching password 0 of 0
                      </small>
                    </FormText>
                  </div>
                </FormGroup>
                <Button
                  active={false}
                  disabled={false}
                  id="ResetPasswordSubmit"
                  type="submit"
                  variant="primary"
                >
                  <button
                    className="btn btn-primary"
                    disabled={false}
                    id="ResetPasswordSubmit"
                    type="submit"
                  >
                    Reset Password
                  </button>
                </Button>
              </form>
            </Form>
          </div>
        </Row>
      </ResetPasswordForm>
    </div>
  </Container>
</ResetPassword>
`;

exports[`<ResetPasswordForm> @Render should render "loading" 1`] = `
<ResetPassword>
  <Container
    fluid={false}
  >
    <div
      className="container"
    >
      <Loading>
        <div>
          Loading...
        </div>
      </Loading>
    </div>
  </Container>
</ResetPassword>
`;

exports[`<ResetPasswordForm> @Render should render "success" 1`] = `
<ResetPassword>
  <Container
    fluid={false}
  >
    <div
      className="container"
    >
      <Row
        id="ResetPasswordSuccess"
        noGutters={false}
      >
        <div
          className="row"
          id="ResetPasswordSuccess"
        >
          <h3>
            Password updated. Please 
            <Link
              to="/login"
            >
              click here
            </Link>
             to login
          </h3>
        </div>
      </Row>
    </div>
  </Container>
</ResetPassword>
`;
